single product loading overflow issue resolved

--- a/public/scss/_slider.scss
+++ b/public/scss/_slider.scss
@@ -14,10 +14,7 @@
     width: 100%;
     position: absolute;
     z-index: 999;
-    padding-bottom: 78.054971%;
-      @media(max-width: 767px){
-        padding-bottom: 128.95377129%
-    }
+    height: 100%;
 }
 .prod-slides li {
     opacity: 0;
